--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="left">
-            <img class="menu" src="icons/hamburger-menu.svg">
+            <img class="menu" src="Icons/hamburger-menu.svg">
             <img class="youtube-logo" src="Icons/youtube-logo.svg">
         </div>
         <div class="mid">
